# api-management-utils

./: .gitignore  README.md  env_cleaner.py  get_apigee_config.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml  publish.yml  sbom-test.yml  sbom.yml
ansible/: Makefile  build-ecs-proxies.yml  deploy-apigee-proxy.yml  deploy-ecs-proxies-retag.yml  deploy-ecs-proxies.yml  rebuild-apigee-app.yml
ansible/ecr-lifecycle/: ecr_lifecycle.json
ansible/filter_plugins/: apigee_helpers.py  ecs_service.py
ansible/roles/build-ecs-proxies/files/: ecr_lifecycle.json
ansible/roles/build-ecs-proxies/tasks/: build-container.yml  main.yml
ansible/roles/create-ecr-build-role/vars/: main.yml
ansible/roles/create-ecr-build-user/tasks/: main.yml
ansible/roles/create-ecr-build-user/vars/: main.yml
ansible/roles/deploy-apigee-product-and-spec/tasks/: main.yml
ansible/roles/deploy-apigee-proxy/tasks/: main.yml
az/: build-prereqs.yml
azure/: build-and-push-ecs-proxies.yml  build-prereqs.yml  cleanup-ecs-pr-proxies.yml  cleanup-pr-portal-apis-and-specs.yml  create-build-env-vars.yml  deploy-ecs-proxies-retag.yml  utils-pr-pipeline.yml
azure/common/: apigee-build.yml  apigee-deployment.yml  deploy-stage.yml  pr.yml
azure/components/: aws-assume-role.yml  cleanup-ecs-pr-proxies-job.yml  curl.yml  get-access-token.yml  get-mfa-code.yml  remove-target-proxy.yml  set-commit-hash.yml  set-facts.yml  update-github-status.yml
azure/templates/: deploy-ecs-proxies-retag.yml  deploy-service.yml  setup-build-name.yml
ecr/: ecr_lifecyle.json
ecr-lifecycle/: ecr_lifecycle.json
scripts/: calculate_version.py  copy_spec.py  purge_incorrect_env_vars.py  terraform_force_unlock.py  test_pull_request_deployments.py
(+22 files in other folders)
