[tool.poetry]
name = "api-management-utils"
version = "0.1.0"
description = ""
authors = ["Laurence Smith <laurence.smith@airelogic.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
docopt = "^0.6.2"
jinja2 = "^3.1.6"
requests = "^2.32.5"
flake8 = "^7.3.0"
mypy = "^1.18.2"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
ansible = "^12.2.0"
pyyaml = "^6.0.3"
jmespath = "^1.0.1"
awscli = "^1.32.0"
pydantic = "^1.10.15"
deepdiff = "^8.6.1"
semver = "^3.0"
gitpython = "^3.1.43"
pytest-xdist = "^3.0"
lxml = "^5.0"
boto3 = "^1.34.0"
ansible-core = "^2.19.4"
urllib3 = "^2.5.0"
cryptography = "44.0.1"
click="^8.1.2"

[poetry.group.dev.dependencies]
ansible-lint = "^6.0"
black = "^24.10.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
