[tool.poetry]
name = "api-management-utils"
version = "0.1.0"
description = ""
authors = ["Laurence Smith <laurence.smith@airelogic.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
docopt = "^0.6.2"
jinja2 = "^3.1.6"
requests = "^2.32.5"
flake8 = "^7.3.0"
mypy = "^1.18.2"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ansible = "^12.2.0"
pyyaml = "^6.0.3"
jmespath = "^1.0.1"
awscli = "^1.38.38"
pydantic = "^1.10.26"
deepdiff = "^8.6.2"
semver = "^3.0"
gitpython = "^3.1.46"
pytest-xdist = "^3.0"
lxml = "^5.0"
boto3 = "^1.37.38"
ansible-core = "^2.19.8"
urllib3 = "^2.6.3"
cryptography = "46.0.7"
click="^8.3.2"

[poetry.group.dev.dependencies]
ansible-lint = "^6.0"
black = "^24.10.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
